@@ -4112,6 +4112,7 @@ INSERT INTO REL_towns VALUES ('M', 'Montr&eacute;al');
     <abbr title="Extensible Markup Language">XML</abbr>,
     <abbr title="Perl Compatible Regular Expressions">PCRE</abbr> and
     <abbr title="PHP Extension and Application Repository">PEAR</abbr> support.
+    You either need a SOAP PHP extension or install PEAR SOAP module.
     On your system command line, run <tt>"pear install Net_Socket Net_URL
     HTTP_Request Mail_Mime Net_DIME SOAP"</tt> to get the necessary
     <abbr title="PHP Extension and Application Repository">PEAR</abbr> modules
